--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
         android:ems="10"
+        android:hint="Please enter first number:"
         android:inputType="number"
         android:text="@string/num1"
         app:layout_constraintEnd_toEndOf="parent"
@@ -28,6 +29,7 @@
         android:layout_marginTop="40dp"
         android:layout_marginEnd="8dp"
         android:ems="10"
+        android:hint="Please enter second number: "
         android:inputType="number"
         android:text="@string/num2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,12 +50,13 @@
 
     <TextView
         android:id="@+id/result"
-        android:layout_width="50dp"
+        android:layout_width="134dp"
         android:layout_height="50dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="60dp"
         android:layout_marginEnd="8dp"
         android:text="@string/txt_result"
+        android:textAlignment="center"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
